[package]
name = "microbit-compass"
version = "0.1.0"
authors = ["Evan Helbig <evan@evanhelbig.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
lsm303agr = "0.2.2"
libm = "0.2.7"
embedded-hal = "0.2.7"
microbit-v2 = "0.13.0"
